# mathanprasannakumar.github.io

./: .gitignore  CMakeLists.txt  README.md  Readme.md  app.js  docker-compose.yaml  index.html  main.html  styles.css
app/js/: index.js
app/scss/: styles.scss
app/scss/basic/: _boilerplate.scss
app/scss/layouts/: _aboutme.scss  _home.scss  _index.scss  _internship.scss  _project.scss  _sub.scss
app/scss/mixins/: _index.scss  _menubar.scss
app/scss/navbar/: _nav.scss
backend/: CMakeLists.txt
backend/src/: chat_app.cpp  sep_comp.cpp
css/: styles.css  styles.css.map
frontend/: .gitignore  Dockerfile  package.json  pnpm-lock.yaml  tailwind.config.ts
frontend/src/app/: about.tsx  globals.css  layout.tsx  page.tsx
frontend/src/components/: About.tsx  Contact.tsx  Experience.tsx  Navbar.tsx  PositionCard.tsx  Project.tsx
html/: index.html
public/app/scss/basic/: _boilerplate.scss
public/app/scss/layouts/: _end.scss  _index.scss
public/app/scss/navbar/: _nav.scss
src/: http_server.cpp  sql_client.cpp
views/: main.html
